Fixed layout issues. Closed #4 #5 #6

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ body {
 	background-image: url("../images/pattern.png");
 }
 
+img {
+	border: none;
+}
 
 .content {
     font-family: "Fontin Sans", "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif;
